# duple

./: .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  supabase_migration.sql  svelte.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
e2e/: landing.spec.ts
public/: manifest.json  robots.txt  sw.js
src/: App.svelte  app.css  main.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: components.test.ts  engine.test.ts
src/lib/components/: DownloadModal.svelte  Landing.svelte  Layout.svelte  PinGuard.svelte  Sidebar.svelte  Skeleton.svelte  TopBar.svelte
src/lib/db/: core.ts  haid_harian.ts  index.ts  log_makanan.ts  makanan.ts  momen.ts  mood.ts  orang.ts  rencana.ts  schema.ts  settings.ts  siklus.ts  trigger.ts  wishlist.ts
src/lib/engine/: ical.ts  rekomendasi.ts  reminders.ts
src/lib/i18n/: index.svelte.ts  index.ts
src/lib/stores/: app.svelte.ts  pin.svelte.ts
src/lib/sync/: supabase.ts
src/lib/utils/: crypto.ts  date.ts
src/pages/: ApologyPage.svelte  CalendarExportPage.svelte  Dashboard.svelte  DateGeneratorPage.svelte  HealthCheckPage.svelte  LLMPage.svelte  LogMakananPage.svelte  LoveQuizPage.svelte  MakananPage.svelte  MomenPage.svelte  MoodPage.svelte  OrangPage.svelte  RekomendasiPage.svelte  RencanaPage.svelte  SettingsPage.svelte  SiklusPage.svelte  StatsPage.svelte  TriggerPage.svelte  WishlistPage.svelte
